2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* ftpd.tcl: Fix for [SF Tcllib Bug 1720144]. Version
	* ftpd.man: of the package bumped to 1.2.3.
	* pkgIndex.tcl:

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-10-05  Andreas Kupries <andreask@activestate.com>

	* ftpd.tcl: Fixed [Tcllib SF Bug 1006157] reported by Stephen
	  Huntley <blacksqr@users.sourceforge.net>. Using fake user/group
	  information when on Windows.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.tcl: Updated version number to sync with 1.6.1
	* ftpd.man: release.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.tcl: Rel. engineering. Updated version number 
	* ftpd.man: of ftpd to reflect its changes, to 1.2.1.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bugfixes by Gerald Lester. No details available. Gerald is asked
	  to replace this entry with one describing his changes.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 
